Update wrangler.toml to use new rules format

--- a/wrangler.toml
+++ b/wrangler.toml
@@ -7,7 +7,7 @@ main = "./build/index.js"
 [site]
   bucket = "./public"
 
-[[build.upload.rules]]
+[[rules]]
   type = "ESModule"
   globs = ["**/*.js"]
 
